tests/fixtures/errors/invalid_pk_leading_zero.norm
:root
:data
x
@07

:items
pk,name
07,alpha
